--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,13 +1,37 @@
+@use 'variables' as *;
 
+@mixin mobile {
+    @media (max-width: 767px) {
+        @content
+    }
+};
+
+@mixin tablet {
+    @media (min-width: 768px) and (max-width: 1279px) {
+        @content
+    }
+};
+
+@mixin desktop {
+    @media (min-width: 1280px) {
+        @content
+    }
+};
 
 @mixin page-header {
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
+    @include mobile{
+
+    }
     @include tablet {
         font-size: 3.75rem;
         line-height: 4.25rem;
         font-weight: 700;
+    }
+    @include desktop {
+
     }
 }
 
@@ -15,6 +39,9 @@
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
+    @include mobile{
+
+    }
     @include tablet {
         font-size: 2.25rem;
         line-height: 2.75rem;
@@ -26,6 +53,9 @@
     font-size: .875rem;
     line-height: 1.375rem;
     font-weight: 600;
+    @include mobile{
+
+    }
     @include tablet {
         font-size: 1.5rem;
         line-height: 1.375rem;
@@ -37,6 +67,9 @@
     font-size: .8125rem;
     line-height: 1.125rem;
     font-weight: 400;
+    @include mobile{
+
+    }
     @include tablet {
         font-size: .875rem;
         line-height: 1.375rem;
@@ -48,6 +81,9 @@
     font-size: .8125rem;
     line-height: 1.125rem;
     font-weight: 400;
+    @include mobile{
+
+    }
     @include tablet {
         font-size: .875rem;
         line-height: 1.25rem;
@@ -59,6 +95,9 @@
     font-size: .625rem;
     line-height: 1.25rem;
     font-weight: 700;
+    @include mobile{
+
+    }
     @include tablet {
         font-size: .75rem;
         line-height: 1.25rem;
