--- a/styles/partials/_global.css
+++ b/styles/partials/_global.css
@@ -1,1 +1,43 @@
-/*# sourceMappingURL=global.css.map */
+@font-face {
+  font-family: "avenir-next-normal";
+  src: url("/assets/font/AvenirNextLTPro-Regular.otf");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "avenir-next-bold";
+  src: url("/assets/font/AvenirNextLTPro-Bold.otf");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "avenir-next-demi";
+  src: url("/assets/font/AvenirNextLTPro-Demi.otf");
+  font-weight: bold;
+  font-style: normal;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #323232;
+  text-decoration: none;
+}
+.navigation__title {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .navigation__title {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 700;
+  }
+}/*# sourceMappingURL=global.css.map */
