--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,4 +1,4 @@
-@use 'variables' as *;
+@use './variables' as *;
 
 @mixin mobile {
     @media (max-width: 767px) {
@@ -22,6 +22,8 @@
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
+    font-family: ;
+
     @include mobile{
 
     }
@@ -39,6 +41,8 @@
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
+    font-family: ;
+
     @include mobile{
 
     }
@@ -53,6 +57,7 @@
     font-size: .875rem;
     line-height: 1.375rem;
     font-weight: 600;
+    font-family: ;
     @include mobile{
 
     }
@@ -67,6 +72,8 @@
     font-size: .8125rem;
     line-height: 1.125rem;
     font-weight: 400;
+    font-family: ;
+
     @include mobile{
 
     }
@@ -81,6 +88,8 @@
     font-size: .8125rem;
     line-height: 1.125rem;
     font-weight: 400;
+    font-family: ;
+
     @include mobile{
 
     }
@@ -95,6 +104,8 @@
     font-size: .625rem;
     line-height: 1.25rem;
     font-weight: 700;
+    font-family: ;
+    
     @include mobile{
 
     }
