adding typography to mixins

--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,19 +1,19 @@
 @font-face {
-    font-family: "avenir-next-normal";
+    font-family: "Avenir Next Regular";
     src: url("/assets/font/AvenirNextLTPro-Regular.otf");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: "avenir-next-bold";
+    font-family: "Avenir Next Bold";
     src: url("/assets/font/AvenirNextLTPro-Bold.otf");
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
-    font-family: "avenir-next-demi";
+    font-family: "Avenir Next Demi";
     src: url("/assets/font/AvenirNextLTPro-Demi.otf");
     font-weight: bold;
     font-style: normal;
