--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -22,7 +22,7 @@
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
-    font-family: ;
+    font-family: "Avenir Next Bold";
 
     @include mobile{
 
@@ -41,7 +41,7 @@
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
-    font-family: ;
+    font-family: "Avenir Next Bold";
 
     @include mobile{
 
@@ -57,7 +57,7 @@
     font-size: .875rem;
     line-height: 1.375rem;
     font-weight: 600;
-    font-family: ;
+    font-family: "Avenir Next Demi";
     @include mobile{
 
     }
@@ -72,7 +72,7 @@
     font-size: .8125rem;
     line-height: 1.125rem;
     font-weight: 400;
-    font-family: ;
+    font-family: "Avenir Next Regular";
 
     @include mobile{
 
@@ -88,7 +88,7 @@
     font-size: .8125rem;
     line-height: 1.125rem;
     font-weight: 400;
-    font-family: ;
+    font-family: "Avenir Next Regular";
 
     @include mobile{
 
@@ -104,8 +104,8 @@
     font-size: .625rem;
     line-height: 1.25rem;
     font-weight: 700;
-    font-family: ;
-    
+    font-family: "Avenir Next Bold";
+
     @include mobile{
 
     }
