--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -9,10 +9,10 @@
 }
 
 .navigation{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include flex-column;
+    @include flex-center;
     background-color: $primary-dark-text;
+    color: $primary-light-text;
     text-decoration: none;
 
     &__title{
@@ -24,38 +24,9 @@
     &_bio-btn{}
     &__shows-btn{}
 
-}
+    @include mobile{
+        @include page-header-mobile
+    }
 
-
-.hero{}
-
-.hero__title{}
-
-.hero__img{}
-
-
-.introduction{
 
 }
-
-.introduction__title{}
-
-.introduction__img{}
-
-.introduction__content{}
-
-.introduction__text{}
-
-
-.about{}
-
-.about__title{}
-
-.about__content{}
-
-
-.gallery{}
-
-.gallery__title{}
-
-.gallery__imgs{}
