--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -2,19 +2,19 @@
 
 @mixin mobile {
     @media (max-width: 767px) {
-        @content
+        @content;
     }
 };
 
 @mixin tablet {
     @media (min-width: 768px) and (max-width: 1279px) {
-        @content
+        @content;
     }
 };
 
 @mixin desktop {
     @media (min-width: 1280px) {
-        @content
+        @content;
     }
 };
 
@@ -25,7 +25,9 @@
     font-family: "Avenir Next Bold";
 
     @include mobile{
-
+        font-size: 1.5rem;
+        line-height: 2rem;
+        font-weight: 700;
     }
     @include tablet {
         font-size: 3.75rem;
@@ -33,7 +35,7 @@
         font-weight: 700;
     }
     @include desktop {
-
+        @include page-header-tablet;
     }
 }
 
@@ -44,12 +46,17 @@
     font-family: "Avenir Next Bold";
 
     @include mobile{
-
-    }
+        font-size: ;
+        line-height: ;
+        font-weight: ;
+    };
     @include tablet {
         font-size: 2.25rem;
         line-height: 2.75rem;
         font-weight: 700;
+    };
+    @include desktop {
+        @include section-header-tablet;
     }
 }
 
@@ -59,12 +66,17 @@
     font-weight: 600;
     font-family: "Avenir Next Demi";
     @include mobile{
-
+        font-size: ;
+        line-height: ;
+        font-weight: ;
     }
     @include tablet {
         font-size: 1.5rem;
         line-height: 1.375rem;
         font-weight: 600;
+    }
+    @include desktop {
+        @include subheader-tablet;
     }
 }
 
@@ -75,12 +87,17 @@
     font-family: "Avenir Next Regular";
 
     @include mobile{
-
+        font-size: ;
+        line-height: ;
+        font-weight: ;
     }
     @include tablet {
         font-size: .875rem;
         line-height: 1.375rem;
         font-weight: 400;
+    }
+    @include desktop {
+        @include body-tablet;
     }
 }
 
@@ -91,27 +108,49 @@
     font-family: "Avenir Next Regular";
 
     @include mobile{
-
+        font-size: ;
+        line-height: ;
+        font-weight: ;
     }
     @include tablet {
         font-size: .875rem;
         line-height: 1.25rem;
         font-weight: 400;
     }
+    @include desktop {
+        @include footer-tablet;
+    }
 }
 
-@mixin btn-label {
+@mixin labels-btns {
     font-size: .625rem;
     line-height: 1.25rem;
     font-weight: 700;
     font-family: "Avenir Next Bold";
 
     @include mobile{
-
+        font-size: ;
+        line-height: ;
+        font-weight: ;
     }
     @include tablet {
         font-size: .75rem;
         line-height: 1.25rem;
         font-weight: 700;
     }
+    @include desktop {
+        @include btns-labels-tablet;
+    }
+}
+
+
+@mixin flex-center {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+@mixin flex-column {
+    display: flex;
+    flex-direction: column;
 }
