--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,4 +1,5 @@
 @use './variables' as *;
+@use './typography' as *;
 
 @mixin mobile {
     @media (max-width: 767px) {
@@ -27,7 +28,7 @@
     @include mobile{
         font-size: 1.5rem;
         line-height: 2rem;
-        font-weight: 700;
+        font-weight: 400;
     }
     @include tablet {
         font-size: 3.75rem;
@@ -46,9 +47,9 @@
     font-family: "Avenir Next Bold";
 
     @include mobile{
-        font-size: ;
-        line-height: ;
-        font-weight: ;
+        font-size: 1.5rem;
+        line-height: 2rem;
+        font-weight: 700;
     };
     @include tablet {
         font-size: 2.25rem;
@@ -66,9 +67,9 @@
     font-weight: 600;
     font-family: "Avenir Next Demi";
     @include mobile{
-        font-size: ;
-        line-height: ;
-        font-weight: ;
+        font-size: .875rem;
+        line-height: 1.375rem;
+        font-weight: 600;
     }
     @include tablet {
         font-size: 1.5rem;
@@ -87,9 +88,9 @@
     font-family: "Avenir Next Regular";
 
     @include mobile{
-        font-size: ;
-        line-height: ;
-        font-weight: ;
+        font-size: .8125rem;
+        line-height: 1.125rem;
+        font-weight: 400;
     }
     @include tablet {
         font-size: .875rem;
@@ -108,9 +109,9 @@
     font-family: "Avenir Next Regular";
 
     @include mobile{
-        font-size: ;
-        line-height: ;
-        font-weight: ;
+        font-size: .8125rem;
+        line-height: 1.125rem;
+        font-weight: 400;
     }
     @include tablet {
         font-size: .875rem;
@@ -129,9 +130,9 @@
     font-family: "Avenir Next Bold";
 
     @include mobile{
-        font-size: ;
-        line-height: ;
-        font-weight: ;
+        font-size: .625rem;
+        line-height: 1.25rem;
+        font-weight: 700;
     }
     @include tablet {
         font-size: .75rem;
