--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -36,28 +36,28 @@
         font-weight: 700;
     }
     @include desktop {
-        @include page-header-tablet;
+        @include tablet;
     }
 }
 
 @mixin section-header {
     font-size: 1.5rem;
     line-height: 2rem;
-    font-weight: 700;
-    font-family: "Avenir Next Bold";
+    font-weight: 400;
+    font-family: "Avenir Next";
 
     @include mobile{
         font-size: 1.5rem;
         line-height: 2rem;
-        font-weight: 700;
+        font-weight: 400;
     };
     @include tablet {
         font-size: 2.25rem;
         line-height: 2.75rem;
-        font-weight: 700;
+        font-weight: 400;
     };
     @include desktop {
-        @include section-header-tablet;
+        @include tablet;
     }
 }
 
@@ -77,7 +77,7 @@
         font-weight: 600;
     }
     @include desktop {
-        @include subheader-tablet;
+        @include tablet;
     }
 }
 
@@ -98,7 +98,7 @@
         font-weight: 400;
     }
     @include desktop {
-        @include body-tablet;
+        @include tablet;
     }
 }
 
@@ -119,7 +119,7 @@
         font-weight: 400;
     }
     @include desktop {
-        @include footer-tablet;
+        @include tablet;
     }
 }
 
@@ -140,7 +140,7 @@
         font-weight: 700;
     }
     @include desktop {
-        @include btns-labels-tablet;
+        @include tablet;
     }
 }
 
