--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -23,12 +23,12 @@
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
-    font-family: "Avenir Next Bold";
+    font-family: "Avenir Next Demi";
 
     @include mobile{
-        font-size: 1.5rem;
+        font-size: 1.875rem;
         line-height: 2rem;
-        font-weight: 400;
+        font-weight: 700;
     }
     @include tablet {
         font-size: 3.75rem;
@@ -36,7 +36,9 @@
         font-weight: 700;
     }
     @include desktop {
-        @include tablet;
+        font-size: 3.75rem;
+        line-height: 4.25rem;
+        font-weight: 700;
     }
 }
 
@@ -44,7 +46,7 @@
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 400;
-    font-family: "Avenir Next";
+    font-family: "Avenir Next Demi";
 
     @include mobile{
         font-size: 1.5rem;
@@ -57,7 +59,9 @@
         font-weight: 400;
     };
     @include desktop {
-        @include tablet;
+        font-size: 2.25rem;
+        line-height: 2.75rem;
+        font-weight: 400;
     }
 }
 
@@ -77,7 +81,9 @@
         font-weight: 600;
     }
     @include desktop {
-        @include tablet;
+        font-size: 1.5rem;
+        line-height: 1.375rem;
+        font-weight: 600;
     }
 }
 
@@ -98,7 +104,9 @@
         font-weight: 400;
     }
     @include desktop {
-        @include tablet;
+        font-size: .875rem;
+        line-height: 1.375rem;
+        font-weight: 400;
     }
 }
 
@@ -119,7 +127,9 @@
         font-weight: 400;
     }
     @include desktop {
-        @include tablet;
+        font-size: .875rem;
+        line-height: 1.25rem;
+        font-weight: 400;
     }
 }
 
@@ -140,7 +150,9 @@
         font-weight: 700;
     }
     @include desktop {
-        @include tablet;
+        font-size: .75rem;
+        line-height: 1.25rem;
+        font-weight: 700;
     }
 }
 
