--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -19,11 +19,12 @@
     }
 };
 
+
 @mixin page-header {
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
-    font-family: "Avenir Next Demi";
+    font-family: "Avenir Next Bold";
 
     @include mobile{
         font-size: 1.5rem;
@@ -166,6 +167,11 @@
 @mixin flex-column {
     display: flex;
     flex-direction: column;
+}
+
+@mixin flex-row {
+    display: flex;
+    flex-direction: row;
 }
 
 @mixin mobile_padding{
