--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,20 +1,20 @@
 @font-face {
     font-family: "Avenir Next Regular";
     src: url("/assets/font/AvenirNextLTPro-Regular.otf");
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Avenir Next Bold";
     src: url("/assets/font/AvenirNextLTPro-Bold.otf");
-    font-weight: bold;
+    font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Avenir Next Demi";
     src: url("/assets/font/AvenirNextLTPro-Demi.otf");
-    font-weight: bold;
+    font-weight: 600;
     font-style: normal;
 }
