--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -6,11 +6,11 @@
 // desktop
 
 // Primary colours
-$primary-dark-text: #323232;
-$secondary-text: #AFAFAF;
-$primary-light-text: #FFFFFF;
+$bandSite-black: #323232;
+$sliver: #AFAFAF;
+$white: #FFFFFF;
 
 // Secondary colours
-$CTA-hover: #000000;
-$divider-line: #E1E1E1;
-$alt-background: #FAFAFA;
+$bandSite-darkBlack: #000000;
+$mercury: #E1E1E1;
+$alabaster: #FAFAFA;
