--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -21,10 +21,11 @@
 
 
 @mixin page-header {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     line-height: 2rem;
     font-weight: 600;
-    font-family: "Avenir Next Bold";
+    font-family: "Avenir Next Demi";
+
     @include tablet {
         font-size: 3.75rem;
         line-height: 4.25rem;
