--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -26,7 +26,6 @@ html, body {
         width: 40%;
         margin-bottom: 1rem;
     }
-
     &__btns{
         @include subheader;
         display: flex;
@@ -35,27 +34,25 @@ html, body {
         color: $white;
         list-style: none;
         padding-bottom: 0;
-        margin: 0;
         width: 100%;
         position: relative;
-
 
         a {
             color: $white;
             text-decoration: none;
             list-style: none;
             position: relative;
-            padding-bottom: 18px;
+            padding-bottom: 1.125rem;
 
             &.active::after { 
                 content: "";
                 position: absolute;
                 bottom: 0; 
                 left: 50%;
-                width: 450%; /* Adjust this value to make the border longer */
-                height: 3px;
+                width: 450%; // Adjust this value to make the border longer
+                height: .1875rem;
                 background-color: $white;
-                transform: translateX(-60%); /* Center the border horizontally */
+                transform: translateX(-60%); // Center the border horizontally 
                 transition: background-color 0.6s ease-in-out;
             }
         }
@@ -63,162 +60,164 @@ html, body {
             color: $sliver;
         }
     }
-
     @include tablet{
         @include flex-row;
         @include tablet-padding;
-        position: relative;
-        display: flex;
         justify-content: flex-start;
     
         &__icon{
             width: 15%;
             margin-bottom: 0;
         }
-    
         &__btns{
             @include body;
             width: 40%;
             margin: 0;
-            padding-bottom: 0;
-            display: flex;
-            justify-content: space-around;
     
             a {
-                position: relative;
-                padding-bottom: 40px;
+                padding-bottom: 2.5rem;
 
                 &.active::after {
-                    content: "";
-                    position: absolute;
-                    bottom: 0; 
-                    left: 50%;
                     width: 100%;
-                    height: 4px;
-                    transform: translateX(-50%); /* Center the border horizontally */
-                    transition: background-color 0.6s ease-in-out;
+                    height: .25rem;
+                    transform: translateX(-50%);
                 }
             }
             .inactive{
-                color: $sliver;
-                margin-left: -100px;
+                margin-left: -6.25rem;
             }
         }
-
     }
-
     @include desktop {
         @include flex-row;
-        padding: 30px 80px;
-        position: relative;
-        display: flex;
+        @include tablet-padding;
+        padding: 1.875rem 5rem;
         justify-content: flex-start;
-    
+        
         &__icon{
             width: 7%;
             margin-bottom: 0;
         }
-    
         &__btns{
             @include body;
             width: 20%;
-            margin: 0;
-            padding-bottom: 0;
-            display: flex;
-            justify-content: space-around;
     
             a {
-                position: relative;
-                padding-bottom: 32px;
+                padding-bottom: 2rem;
 
                 &.active::after {
-                    content: "";
-                    position: absolute;
-                    bottom: 0; 
-                    left: 50%;
                     width: 100%;
-                    height: 2px;
-                    transform: translateX(-50%); /* Center the border horizontally */
-                    transition: background-color 0.6s ease-in-out;
+                    height: .125rem;
+                    transform: translateX(-50%);
                 }
             }
             .inactive{
-                color: $sliver;
-                margin-left: -50px;
+                margin-left: -3.125rem;
             }
+        }
     }
-    }
-
 }
-
 
 .footer{
     // mobile view
     background-color: $bandSite-black;
-    color: $white;
+    color: $mercury;
     @include mobile_padding;
     @include flex-column;
 
     .in-touch{
-        margin-bottom: 1rem;
-    
         &__title{
-            @include section-header;
-            margin-bottom: 1rem;
+            @include page-header;
+            margin-bottom: 1.2rem;
         }
         &__media-icons{
             display: flex;
-            gap: 40px;
-            width: 50px;
+            gap: 2.5rem;
+            width: 3.125rem;
+            margin-bottom: 1.5rem;
         }
     }
-
     .management, .artist-group, .arch-entertainment{
         margin-bottom: 1rem;
-
         &__title{
             @include subheader;
-            margin-bottom: 1rem;
+            margin-bottom: 1.2rem;
         }
-
-        &__address{
+        &__address, &__booking, &__email {
             @include body;
-            margin-bottom: 1rem;
-        }
-        &__booking{
-                    @include body;
-                    margin-bottom: 1rem;
         }
         &__email{
-            @include body;
-            scroll-margin-top: 1rem;
+            margin-top: 1rem;
         }
     }
-
     .footer-logo{
         margin-bottom: 1rem;
 
         &__title-mobile{
-            @include page-header;
-            margin-bottom: 1rem;
+            margin-top: 1.875rem;
+            margin-bottom: .625rem;
         }
-
         &__copyright{
             @include body;
         }
-
-        &__title--tablet{
+        &__title-tablet{
             display: none;
         }
     }
     // tablet view
     @include tablet{
-        background-color: $bandSite-black;
-        color: $white;
+        @include tablet_padding;
+
+        &__top{
+            @include flex-row;
+            align-items: center; 
+            justify-content: space-between;
+            flex-wrap: nowrap;
+            margin-bottom: 1.5rem;
+        }
+        .in-touch{
+            &__title{
+                @include section-header;
+            }
+            &__media-icons{
+                margin-left: 0;
+                display: flex;
+            }
+        }
+        &__content {
+            @include flex-row;
+            justify-content: space-between;
+            width: 100%;
+        }
+        .management, .artist-group, .arch-entertainment{
+
+            &__title{
+                @include body;
+                margin-bottom: 1.2rem;
+            }
+        }
+    }
+    .footer-logo{
+
+        &__title-mobile{
+            display: none;
+        }
+        &__title-tablet{
+            margin-top: 1.875rem;
+            margin-bottom: .625rem;
+            display: flex;
+        }
+        &__copyright{
+            margin-top: 1.875rem;
+        }
+    }
+    // desktop view
+    @include desktop {
         @include tablet_padding;
         @include flex-row;
 
         &__top {
+            @include flex-row;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -226,8 +225,7 @@ html, body {
 
     .in-touch{
         margin-bottom: 1rem;
-        
-
+    
         &__title{
             @include section-header;
             margin-bottom: 1rem;
@@ -235,8 +233,8 @@ html, body {
         }
         &__media-icons{
             display: flex;
-            gap: 40px;
-            width: 50px;
+            gap: 2.5rem;
+            width: 3.125rem;
         }
     }
     .management, .artist-group, .arch-entertainment{
@@ -274,10 +272,6 @@ html, body {
         }
     }
     }
-    // desktop view
-    @include desktop {
-
-    }
-
 }
+
 
