--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -240,7 +240,7 @@ html, body {
         &__content {
             @include flex-row;
             justify-content: flex-start;
-            gap: 50px;
+            gap: 3.125rem;
             margin-left: 3.75rem;
             width: 100%;
         }
@@ -259,12 +259,11 @@ html, body {
         }
         &__title-tablet{
             width: 8%;
-            margin-right: 60px;
-            margin-bottom: 0.8rem;
+            margin: 0 3.75rem 0.8rem 0;
             display: flex;
         }
         &__copyright{
-            margin-top: 1.875rem;
+            margin: 1.875rem 0 0 3.75rem;
         }
     }
 }
