--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -23,7 +23,7 @@ html, body {
     position: relative;
 
     &__icon{
-        width: 40%;
+        width: 100%;
         margin-bottom: 1rem;
     }
     &__btns{
@@ -52,7 +52,7 @@ html, body {
                 width: 450%; // Adjust this value to make the border longer
                 height: .1875rem;
                 background-color: $white;
-                transform: translateX(-60%); // Center the border horizontally 
+                transform: translateX(-60%); // Centre the border horizontally 
                 transition: background-color 0.6s ease-in-out;
             }
         }
@@ -66,7 +66,7 @@ html, body {
         justify-content: flex-start;
     
         &__icon{
-            width: 15%;
+            width: 130%;
             margin-bottom: 0;
         }
         &__btns{
@@ -95,7 +95,7 @@ html, body {
         justify-content: flex-start;
         
         &__icon{
-            width: 7%;
+            width: 110%;
             margin-bottom: 0;
         }
         &__btns{
