--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -29,12 +29,10 @@
     @include tablet {
         font-size: 3.75rem;
         line-height: 4.25rem;
-        font-weight: 600;
     }
     @include desktop {
         font-size: 3.75rem;
         line-height: 4.25rem;
-        font-weight: 600;
     }
 }
 
@@ -47,12 +45,10 @@
     @include tablet {
         font-size: 2.25rem;
         line-height: 2.75rem;
-        font-weight: 400;
     };
     @include desktop {
         font-size: 2.25rem;
         line-height: 2.75rem;
-        font-weight: 400;
     }
 }
 
@@ -65,12 +61,10 @@
     @include tablet {
         font-size: 1.5rem;
         line-height: 1.375rem;
-        font-weight: 600;
     }
     @include desktop {
         font-size: 1.5rem;
         line-height: 1.375rem;
-        font-weight: 600;
     }
 }
 
@@ -79,15 +73,14 @@
     line-height: 1.125rem;
     font-weight: 400;
     font-family: "Avenir Next Regular";
+    
     @include tablet {
         font-size: .875rem;
         line-height: 1.375rem;
-        font-weight: 400;
     }
     @include desktop {
         font-size: .875rem;
         line-height: 1.375rem;
-        font-weight: 400;
     }
 }
 
@@ -96,15 +89,14 @@
     line-height: 1.125rem;
     font-weight: 400;
     font-family: "Avenir Next Regular";
+
     @include tablet {
         font-size: .875rem;
         line-height: 1.25rem;
-        font-weight: 400;
     }
     @include desktop {
         font-size: .875rem;
         line-height: 1.25rem;
-        font-weight: 400;
     }
 }
 
@@ -117,12 +109,10 @@
     @include tablet {
         font-size: .75rem;
         line-height: 1.25rem;
-        font-weight: 700;
     }
     @include desktop {
         font-size: .75rem;
         line-height: 1.25rem;
-        font-weight: 700;
     }
 }
 
@@ -143,7 +133,13 @@
     flex-direction: row;
 }
 
-@mixin mobile_padding{
+@mixin space-between{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@mixin mobile-padding{
     padding: 24px 16px 16px 16px;
 }
 
